--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,11 +38,9 @@
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
   "C_Cpp_Runner.includePaths": [],
-  "C_Cpp_Runner.includeSearch": [
-    "*",
-    "**/*"
-  ],
+  "C_Cpp_Runner.includeSearch": ["*", "**/*"],
   "C_Cpp_Runner.excludeSearch": [
+    "/lib-sources/**",
     "**/build",
     "**/build/**",
     "**/.*",
@@ -50,6 +48,12 @@
     "**/.vscode",
     "**/.vscode/**"
   ],
+  "files.watcherExclude": {
+    "/lib-sources/**": true,
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.hg/store/**": true
+  },
   "C_Cpp_Runner.useAddressSanitizer": false,
   "C_Cpp_Runner.useUndefinedSanitizer": false,
   "C_Cpp_Runner.useLeakSanitizer": false,
